# ai-agent-city-game

./: .env.example  .gitignore  NOTICE  README.md  SETUP.md  docker-compose.yml  vercel.json
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  models.py  realtime.py  schemas.py  seed.py
backend/app/api/: routes.py
backend/app/citizens/: __init__.py  repository.py
backend/app/citizens/profiles/: cit_001_anaya_rao.yaml  cit_002_milo_chen.yaml  cit_003_priya_nair.yaml  cit_004_owen_brooks.yaml  cit_005_leah_ortiz.yaml  cit_006_samir_patel.yaml  cit_007_nora_kim.yaml  cit_008_eli_morgan.yaml  cit_009_ava_singh.yaml  cit_010_mateo_garcia.yaml  cit_011_mayor_imani_cole.yaml  cit_012_tara_vos.yaml  cit_013_jon_bell.yaml  cit_014_mina_park.yaml  cit_015_theo_reed.yaml  cit_016_grace_okafor.yaml  cit_017_rafi_cohen.yaml  cit_018_hana_yamada.yaml  cit_019_luis_alvarez.yaml  cit_020_juniper_shaw.yaml  cit_021_noah_mensah.yaml  cit_022_iris_novak.yaml  cit_023_felix_stone.yaml  cit_024_sofia_mendes.yaml  cit_025_kai_turner.yaml  cit_026_leo_brooks.yaml
backend/app/cognition/: __init__.py  deep_agents.py  openai_client.py  pipeline.py
backend/app/memory/: store.py
backend/app/simulation/: __init__.py  engine.py
backend/tests/: test_simulation.py
docs/: architecture.md  autonomy.md  citizens.md  cloud-database.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  initial-city.ts  session-simulation.ts  store.ts  types.ts
(+6 files in other folders)
