[project]
name = "agentcity-backend"
version = "0.1.0"
description = "FastAPI simulation, memory, and cognition backend for AgentCity."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.3.2",
  "openai>=1.60.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
